--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "services/index.js", "pages/post/[slug].js", "**/*.js", "**/*.jsx",],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "services/index.js", "pages/post/[slug].js"],
   "exclude": ["node_modules"]
 }
